test/should-fail/变量数组-6.j
globals
    code array cs
endglobals